--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   padding: 20px;
 }
 
-h1, h2 {
+h1, h2, h3, h4 {
   margin-bottom: 10px;
 }
 
@@ -51,6 +51,10 @@ input.pequeno {
   max-width: 100px;
 }
 
+input.media {
+  max-width: 100px;
+}
+
 .bloco {
   background: white;
   padding: 15px;
@@ -67,41 +71,6 @@ input.pequeno {
   margin: 2px 0;
 }
 
-/* Modal */
-.modal {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background-color: rgba(0,0,0,0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 10;
-}
-
-.modal-content {
-  background-color: #fff;
-  padding: 20px;
-  width: 90%;
-  max-width: 500px;
-  border-radius: 8px;
-  position: relative;
-}
-
-.modal-content input {
-  margin-bottom: 10px;
-  width: 100%;
-  padding: 6px;
-}
-
-.close {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  font-size: 20px;
-  cursor: pointer;
-}
-
 .login-container {
   max-width: 300px;
   margin: 100px auto;
@@ -113,8 +82,3 @@ input.pequeno {
 .error {
   color: red;
 }
-
-input.media {
-  max-width: 100px;
-}
-
